# ChangeLog for dev-perl/B-Utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Utils/ChangeLog,v 1.25 2015/02/21 00:48:59 dilfridge Exp $

*B-Utils-0.250.0 (21 Feb 2015)

  21 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +B-Utils-0.250.0.ebuild:
  Version bump

  12 Sep 2014; Mikle Kolyada <zlogene@gentoo.org> -B-Utils-0.210.0.ebuild:
  Drop old.

*B-Utils-0.220.0-r1 (26 Aug 2014)

  26 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +B-Utils-0.220.0-r1.ebuild, -B-Utils-0.220.0.ebuild:
  bumped EAPI to 5 to help with dev-lang/perl upgrade

*B-Utils-0.220.0 (16 Aug 2013)

  16 Aug 2013; Patrick Lauer <patrick@gentoo.org> +B-Utils-0.220.0.ebuild:
  Bump

  16 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org>
  B-Utils-0.210.0.ebuild:
  Adding ~ppc keyword for dev-perl/PDL and his dependences, wrt bug #449762

  13 Jan 2013; Markus Meier <maekke@gentoo.org> B-Utils-0.210.0.ebuild:
  add ~arm, bug #449762

  18 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Drop duplication of myself as a maintainer where there is a herd.

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -B-Utils-0.170.0.ebuild,
  -B-Utils-0.190.0.ebuild:
  Cleanup

*B-Utils-0.210.0 (30 Mar 2012)

  30 Mar 2012; Torsten Veller <tove@gentoo.org> +B-Utils-0.210.0.ebuild:
  Version bump

*B-Utils-0.190.0 (13 Mar 2012)

  13 Mar 2012; Torsten Veller <tove@gentoo.org> +B-Utils-0.190.0.ebuild:
  Version bump

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -B-Utils-0.150.0.ebuild:
  Cleanup

*B-Utils-0.170.0 (02 Dec 2011)

  02 Dec 2011; Torsten Veller <tove@gentoo.org> +B-Utils-0.170.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -B-Utils-0.140.0.ebuild:
  Cleanup

*B-Utils-0.150.0 (19 Apr 2011)

  19 Apr 2011; Torsten Veller <tove@gentoo.org> +B-Utils-0.150.0.ebuild:
  Version bump
