@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Utils/B-Utils-0.250.0.ebuild,v 1.1 2015/02/21 00:48:59 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Utils/B-Utils-0.250.0.ebuild,v 1.2 2015/03/04 06:02:01 maekke Exp $
 
 EAPI=5
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Helper functions for op tree manipulation"
 
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~arm ~ppc ~x86"
 IUSE="test"
 
 RDEPEND="
