@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST Task-Weaken-1.04.tar.gz 29976 SHA256 67e271c55900fe7889584f911daa946e177bb60c8af44c32f4584b87766af3c4 SHA512 19749fada2b030a082d745abbc172125c3e195be5e1166ff02511fbf08aa8d37092cb0ea2cbf95452fef70f2e1cd0062d32f04d74aa52b30f6e85108f9ca80ff WHIRLPOOL 5af1c3aebecf9c44d5afc530007d6872eba491667bd3cea3c1e1971340de335344d330499a44c9968297b57cbaf2b99217ce320d3e663c33abfeed0370c59437
-EBUILD Task-Weaken-1.40.0-r1.ebuild 484 SHA256 487b1c573f134928bfa11145efaa5dfb0221709aa3e580b8da18135be8eb3dd5 SHA512 b4aae370f6dd1e01fb0a3b9b1bc3e70ded7e637ba3ec2ef953a7768b42d3be57d363f2989226dfd67cbcc13de3113d7b533f1246fbc82537fd5df9697b156cfe WHIRLPOOL d749ab8d0e755f0ad50b59db931d1880f936b1706a97a77d7af18ead1cc0597c76e3eca44446588415adc9d4c863a3db2015c25191229d68611758184708ee8b
-MISC ChangeLog 3444 SHA256 6be82b9b45c2aee417f021418bf1425a837f51c0c32e9048227988b31647e2e6 SHA512 539af22e5e93aa68affd4b55c4b9da2c8ea765f7a617a7d32457c97d277153ad54d223759cd5bf59e6c0b42cdbf80dc5d55a2a612ea697653033277d103a691a WHIRLPOOL 62f7607d4bbe8d8e801463132a07e12f2e6657f81809b555f137043b0ee155ade4ad1e879b6c8f42236162b9705656fea8a35f7b41483a7d1d4112f0e04e5cc6
+EBUILD Task-Weaken-1.40.0-r1.ebuild 492 SHA256 a9e70347e003363814d1fb301a701267bc3c635dfcb160ab61d5b8a3fb3a53d4 SHA512 ab10954158c6f8c0f70aefbdc8c2008d16aba8a4ce25ec2b533265a283f1d65a7759740a41853eb59d6717759c2a313a6013f0cd01557a4a0b994145ebda1079 WHIRLPOOL 88d026408b36302f10eef110f802f89b905f1fb097426fb8aa35bdbc258a53e492b048c89c5d528d131f876f63b7a06e5be4159e9194548539f26424cacd902c
+MISC ChangeLog 3550 SHA256 ba10591a1239c1b1ef1ff67f6838ae28db738ebdb5ac06437180060f00b9170b SHA512 1d0da6e19d8de9ec4ceab3385b4ca92578150c5b3abe77cd1de117601d5b54338ffd8a1fcd0de74f19006a038cb1f4d933d6fbbfb19625e789f69a6649dc33d0 WHIRLPOOL bd6e79a0dc0b703b12b290c4b6fae68143efd1e4cf6fdf1b019948ad954725fd059179615626cd398b2ab4b2dbf04680a7e5d9c1c5bc8a0bd0e391fa9afa8e21
 MISC metadata.xml 296 SHA256 577aa65b6d6fc98523f986eac817555a2f8d3d8937e62a53a0a2e6a1fa688b25 SHA512 fec970545fd12b26de0ead1fe085019f359c693b7a0750c70f0469463c6d66bf0373808d6ed8a4bfda16e1d67ce75cd9a9da556be949dd70efa82acadcf77fc9 WHIRLPOOL 66f39f8272f1d4c8eff2ef5908c1d634a10a8b00625b38c5676f6735e9a388c060db46ecffe0fdf6be135c69b50a58d709af67bf12a87e09d905800100241ad1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP3ilQACgkQ2ugaI38ACPDvjgEApiOB1uUs0v9hk2EhPGorLJtU
-tPZtliN5ExWsLoF3M00BAL5V8m4pxfzyh83Okv6mDtvn4FqYlzXYCcTVHizGj9n4
-=ukVP
+iEYEAREIAAYFAlT2n78ACgkQkKaRLQcq0GJBxQCfW3N6sbd0pTW97tADpsUI1OeA
+54UAoIJdylyDoBdAXdnO8AwILLdVKN/N
+=BUTK
 -----END PGP SIGNATURE-----
