@@ -4,10 +4,10 @@ DESCRIPTION=Helper functions for op tree manipulation
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/B-Utils/
 IUSE=test
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=~amd64 ~arm ~ppc ~x86
 LICENSE=|| ( Artistic GPL-1+ )
 RDEPEND=virtual/perl-Exporter virtual/perl-Scalar-List-Utils dev-perl/Task-Weaken dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/J/JJ/JJORE/B-Utils-0.25.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	6b84915e66050718c89bcbc76c144e80	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=0e2d07a617f21b30fcd43b2d0e842d3e
+_md5_=36963aaff57fc1185347923521b80ce4
