@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Task-Weaken
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Task-Weaken/ChangeLog,v 1.27 2014/08/22 18:22:08 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Task-Weaken/ChangeLog,v 1.28 2015/03/04 06:01:33 maekke Exp $
+
+  04 Mar 2015; Markus Meier <maekke@gentoo.org> Task-Weaken-1.40.0-r1.ebuild:
+  add ~arm, bug #540862
 
 *Task-Weaken-1.40.0-r1 (22 Aug 2014)
 
